fixed overflow issue on homepage

--- a/style.css
+++ b/style.css
@@ -2,11 +2,9 @@
 * {
   box-sizing: border-box;
 }
-html,
 body {
-  height: 100%;
-  width: 100%;
-
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   background-image: url(images/globe.jpg);
   background-size: cover;
@@ -20,21 +18,21 @@ body {
   line-height: 35px;
 }
 
-.flexbox-container
-{display:flex}
-
-.flexbox-right
-{ width:55%;
-margin:0px;
-padding-top:5%;
+.flexbox-container {
+  display: flex;
 }
 
-.flexbox-left
-{ width:45%;
-margin:0px;
-padding-top:15%;
+.flexbox-right {
+  width: 55%;
+  margin: 0px;
+  padding-top: 5%;
 }
 
+.flexbox-left {
+  width: 45%;
+  margin: 0px;
+  padding-top: 15%;
+}
 
 a {
   text-decoration: none;
@@ -71,29 +69,32 @@ h1 {
   display: flex;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 .homepage main div {
   flex: 1;
   position: relative;
+  height: 100vh;
 }
 .homepage main div.wander {
   flex: 2;
 }
 .number {
   position: absolute;
-  bottom: 0px;
+  bottom: 12px;
   right: 1px;
   font-family: 'Lato';
   font-style: normal;
   font-size: 70px;
   color: rgb(255, 255, 255, 0.8);
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 .wrapper {
   height: 100vh;
   width: 100vw;
   margin: 0;
   padding: 0;
-  
 }
 .paris,
 .paris-page .wrapper {
@@ -116,64 +117,68 @@ h1 {
   width: 100vw;
   margin: 0;
   padding: 0;
-  position:relative;
+  position: relative;
 }
 .foot-number {
-  position:absolute;
-  bottom:-40px;
-  right:10px;
+  position: absolute;
+  bottom: -40px;
+  right: 10px;
   font-family: 'Lato';
   font-style: normal;
   font-size: 70px;
   color: rgb(255, 255, 255, 0.8);
 }
 
-.amsterdam-page h1{
+.amsterdam-page h1 {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
   text-align: left;
   font-size: 120px;
   margin-top: 0px;
   text-align: right;
-  line-height: 99px;}
+  line-height: 99px;
+}
 
-  .paris-page h1{
-    font-family: 'Lato', sans-serif;
-    font-weight: 700;
-    text-align: left;
-    font-size: 120px;
-    margin-top: 0px;
-    text-align: right;
-    line-height: 99px;}
+.paris-page h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  text-align: left;
+  font-size: 120px;
+  margin-top: 0px;
+  text-align: right;
+  line-height: 99px;
+}
 
-    .london-page h1{
-      font-family: 'Lato', sans-serif;
-      font-weight: 700;
-      text-align: left;
-      font-size: 120px;
-      margin-top: 0px;
-      text-align: right;
-      line-height: 99px;}
+.london-page h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  text-align: left;
+  font-size: 120px;
+  margin-top: 0px;
+  text-align: right;
+  line-height: 99px;
+}
 
-      .rail-route-page h1{
-        font-family: 'Lato', sans-serif;
-        font-weight: 700;
-        text-align: left;
-        font-size: 120px;
-        margin-top: 0px;
-        text-align: right;
-        line-height: 99px;}
+.rail-route-page h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  text-align: left;
+  font-size: 120px;
+  margin-top: 0px;
+  text-align: right;
+  line-height: 99px;
+}
 
-.amsterdam-page img{
+.amsterdam-page img {
   padding-top: 15%;
 }
 
-.london-page img{
+.london-page img {
   padding-top: 15%;
 }
-.paris-page img{
+.paris-page img {
   padding-top: 15%;
 }
-.rail-route-page img{
+.rail-route-page img {
   padding-top: 15%;
 }
